* stephan: added an oversized userinfo check to g_spoofOptions flag 256 and
           added the \n char to the list of characters that may not be used in
           a userinfo string. A user with any of the forbidden chars in his/her
           userinfo will be dropped from the server from now on
* quad:    added sv_maxConnsPerIP as a prevention for fakeplayer DoS attack
* stephan: changed sv_maxConnsPerIP to g_maxConnsPerIP, since it is a game cvar
           and not an engine cvar
* stephan: changed the flags of g_damageBonusOpts and added
           g_damageBonusNearMedics and g_damageBonusTotalMedics. See docs
* stephan: changed g_spoofOptions again. Some of the old flags are not optional
           anymore. This prevents the innocent guidspoofkick many people were
           experiencing. Furthermore an empty IP field is not allowed anymore.
           Default value set to 3* pheno:   fixed xpsave [serverstat] parse error on distance_variance
* pheno:   added et.ClientIsFlooding() library call to Lua API. This function
           only checks for flooding, necessary fields are not updated!
* pheno:   made more Lua API additions
* pheno:   added read-only access to gentity fields
* pheno:   added SHA-1 routines
* pheno:   fixed Lua's et.G_Print()/et.G_LogPrint() library call on et_Print()
           callback server crash bug
* pheno:   added et.G_shrubbot_permission( ent, flag ) library call to Lua API
* pheno:   added lua_allowedModules: If set, only lua modules with the matching
           sha-1 signatures listed in this cvar will be allowed to load
* pheno:   fixed LUA_PATH to ease use of the require() function
* pheno:   Lua API: added RW access to gentity field sess.ignoreClients
* pheno:   Lua API: added et.G_AddSkillPoints( ent, skill, points )
           library call
* pheno:   Lua API: added RO access to gentity field sess.skillpoints
* pheno:   Lua API: added et.G_shrubbot_level( ent ) library call